--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --coverageas"
+    "test": "jest ",
+    "coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
